// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useSignals method. Functional components should properly subscribe to signals and update ui. 1`] = `
<UsingSignalFunction
  onInternalSignal={[Function]}
>
  <div>
    initial
  </div>
</UsingSignalFunction>
`;

exports[`useSignals method. Functional components should properly subscribe to signals and update ui. 2`] = `
<UsingSignalFunction
  onInternalSignal={[Function]}
>
  <div>
    newValue
  </div>
</UsingSignalFunction>
`;
